# piadina

./: .gitignore  Doxyfile.in  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  piadina_config.h.in  planning.md  specification.md
.reuse/: dep5
azdora/: Makefile.am  assembler.c  assembler.h  cbor_encoder.c  cbor_encoder.h  config.c  config.h  main.c  metadata.c  metadata.h  packer_tar_gzip.c  packer_tar_gzip.h
common/: Makefile.am  cbor_core.c  cbor_core.h  crypto.c  crypto.h  footer.c  footer.h  log.c  log.h  metadata_core.c  metadata_core.h  metadata_tree.c  metadata_tree.h  platform.c  platform.h
piadina/: Makefile.am  archive.c  archive.h  config.c  config.h  context.c  context.h  extractor_tar_gzip.c  extractor_tar_gzip.h  loader.c  loader.h  main.c  metadata.c  metadata.h  patchref.c  patchref.h
samples/simple/: entry.sh
tests/: Makefile.am
tests/integration/: Makefile.am  test_bins.sh  test_cache_payload_overrides.sh  test_extract_reuse.sh  test_force_extract.sh  test_pack_extract.sh  test_patchelf_set_interpreter.sh  test_static_link.sh
tests/unit/: Makefile.am  test_azdora_assembler.c  test_azdora_cbor_encode.c  test_azdora_config.c  test_azdora_metadata.c  test_cbor_core.c  test_config.c  test_crypto.c  test_footer.c  test_log.c  test_metadata_core.c  test_metadata_tree.c  test_patchref.c  test_piadina_context.c  test_piadina_loader.c  test_piadina_metadata.c  test_platform.c  test_smoke.c  test_tar_gzip.c
tests/unity/: Makefile.am
