bin_PROGRAMS = piadina
piadina_SOURCES = main.c
piadina_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) $(CBOR_CPPFLAGS) $(ARCHIVE_CPPFLAGS)
piadina_CFLAGS = $(DEBUG_CFLAGS) $(STATIC_CFLAGS)
piadina_LDFLAGS = $(DEBUG_LDFLAGS) $(STATIC_LDFLAGS) $(CBOR_LDFLAGS) $(ARCHIVE_LDFLAGS)
piadina_LDADD = $(CBOR_LIBS) $(ARCHIVE_LIBS)
